--- a/index.html
+++ b/index.html
@@ -21,37 +21,39 @@
     <span>Feito com 🚀 no NLW da Rocketseat</span>
   </aside>
   <nav>
-  <a class="memory" href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank">
-    <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero a Primeira Vaga</h1>
+  <a class="memory" href="#" target="_blank">
+    <small>25 de março de 2004</small>
+      <h1>O começo de tudo!</h1>
       <div>
-        <img src="assets/jornada.png" alt="Jornada do Zero a Primeira Vaga">
+        <img src="assets/primeiro_desktop.jpeg" alt="Primeiro Desktop">
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, dolorum repudiandae? Recusandae, accusamus perspiciatis facilis iusto cum animi autem similique perferendis tempora eligendi reprehenderit, eius molestias ex, laboriosam est ut.</p>
+      <p>Eu desde cedo sempre fui apaixonado por tecnologia, adorava tudo que girava em torno dessa área, porém quando tive meu primeiro contato com um computador foi algo surreal pra mim, algo naquele momento aconteceu, a luz do que eu queria para meu futuro se acendeu naquele momento. E a partir desse dia eu tinha fixado na mente que assim que eu começasse a trabalhar minha primeira aquisição seria sem sombra de dúvidas um computador. E em 2004, logo após eu conseguir um emprego cumpri essa meta.</p>
+      <p>Tenho bem fresco na memória até hoje o dia em que fui montar meu PC, um nostálgico Pentium 4 com o saudoso e mais nostálgico ainda Windows XP embarcado (para os mais saudosistas o melhor sistema já feito pela Microsoft) e um lindo monitor Flatron da LG (de tubo). Tudo naquele desktop era lindo pra mim, a emoção de tirar o setup das caixas e ir montando parte a parte foi indescritível. O momento em que apertei pela primeira vez o Power On, o momento em que o sistema carregou...tudo aquilo fazia total sentido pra mim, sentido do que eu queria pra mim.</p>
+      <p>E foi nesse desktop que aprendi muita coisa, muita coisa mesmo. Na época tudo voltado pra web era muuuito diferente dos dias de hoje, internet então nem se fale, não tem nem como começar uma comparação. Me lembro da internet discada daqueles dias e de deixar o PC ligado a madrugada inteira para poder fazer o download de músicas, vídeo clipes e episódios de animes via torrent, que era uma febre naqueles dias. Como eu era muito curioso, queria aprender de qualquer jeito a formatar o sistema e assim o fiz, e desde então um horizonte se abriu na minha cabeça. Tudo aquilo era muito exclusivo e poucas pessoas sabiam desse processo, para os mais leigos aquilo significava algo de muita inteligência e técnica (o que convenhamos é bem meia verdade).</p>
   </a>
-    <a class="memory" href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank">
-    <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero a Primeira Vaga</h1>
+    <a class="memory" href="#" target="_blank">
+    <small>01 de Fevereiro de 2009</small>
+      <h1>Engenharia da Computação e o início da jornada</h1>
       <div>
-        <img src="assets/jornada.png" alt="Jornada do Zero a Primeira Vaga">
+        <img src="assets/engenharia_de_computacao.jpg" alt="Curso de Engenharia de Computação">
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, dolorum repudiandae? Recusandae, accusamus perspiciatis facilis iusto cum animi autem similique perferendis tempora eligendi reprehenderit, eius molestias ex, laboriosam est ut.</p>
+      <p>O começo de 2009 marcou algo de muito importante na minha vida, o começo da faculdade de Engenharia de Computação. Começava ali minha jornada para a realização do sonho que coloquei na minha cabeça no dia em que liguei o meu primeiro Desktop, meu primeiro PC.</p>
   </a>
-        <a class="memory" href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank">
-    <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero a Primeira Vaga</h1>
+        <a class="memory" href="#" target="_blank">
+    <small>01 de Março de 2011</small>
+      <h1>Análise e Desenvolvimento de Sistemas</h1>
       <div>
-        <img src="assets/jornada.png" alt="Jornada do Zero a Primeira Vaga">
+        <img src="#" alt="">
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, dolorum repudiandae? Recusandae, accusamus perspiciatis facilis iusto cum animi autem similique perferendis tempora eligendi reprehenderit, eius molestias ex, laboriosam est ut.</p>
+      <p></p>
   </a>
-        <a class="memory" href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target="_blank">
-    <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero a Primeira Vaga</h1>
+        <a class="memory" href="#" target="_blank">
+    <small>20 de Outubro de 2016</small>
+      <h1>Vida Profissional e continuação na aprendizagem</h1>
       <div>
-        <img src="assets/jornada.png" alt="Jornada do Zero a Primeira Vaga">
+        <img src="#" alt="">
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, dolorum repudiandae? Recusandae, accusamus perspiciatis facilis iusto cum animi autem similique perferendis tempora eligendi reprehenderit, eius molestias ex, laboriosam est ut.</p>
+      <p></p>
   </a>
   </nav>
 </body>
