--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       <div>
         <img src="#" alt="">
       </div>
-      <p></p>
+      <p>Depois de 2 anos cursando Engenharia de Computação, vi que aquele cursonão era o que eu realmente desejava. Aprendi bastante coisa voltada pra Hardware de computadores, porém eu queria mesmo era aprender a parte de criar e desenvolver o software, escrever o código mesmo. então fiz a mudança de curso e passei a cursar Análise e Desenvolvimento de Sistemas. Nesse curso comecei a ver de fato o que eu queria, algoritmos, lógica, linguagens, programação WEB, e até outras áreas que gosto muito como redes de computadores e sistemas operacionais.</p>
   </a>
         <a class="memory" href="#" target="_blank">
     <small>20 de Outubro de 2016</small>
       <h1>Vida Profissional e continuação na aprendizagem</h1>
       <div>
-        <img src="#" alt="">
+        <img src="assets/linguagens-de-programacao.jpg" alt="Linguagens de Programação">
       </div>
-      <p></p>
+      <p>E depois de termianr o curso de ADS, comecei a procurar vagas de emprego voltadas pra área de desenvolvimento tanto em front-end quanto em back-end e hoje em dia trabalho gerenciando um e-commerce. Tenho diversas funções dentro da empresa, e sou responsável direto pela parte de front-end da empresa. Sou responsável por integrações via API, e controle de integrações...e por esse motivo acabei conhecendo muito sobre diversas plataformas do segmento no mercado, como Vtex e Wordpress só para citar. Agora tenho como objetivo aperfeiçoar ainda mais meus conhecimentos, estudando sobre linguagens, frameworks, e cybersegurança (algo que gosto muito também) para crescer ainda mais tanto pessoalmente quanto profissionalmente.</p>
   </a>
   </nav>
 </body>
